kubernetes/namespaces/monitoring/prometheus/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus
  #namespace: monitoring
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      serviceAccountName: prometheus
      containers:
        - image: prom/prometheus:v3.5.1
          args:
            - "--config.file=/etc/prometheus/prometheus.yml"
            - "--web.external-url=https://prometheus.hyperserver.dev"
            - "--storage.tsdb.path=/var/lib/prometheus"
            - "--storage.tsdb.retention.size=5GB"
            - "--storage.tsdb.retention.time=30d"
            - "--storage.tsdb.no-lockfile"
            - "--web.enable-lifecycle"
          imagePullPolicy: Always
          name: prometheus
          ports:
            - name: prometheus
              containerPort: 9090
          volumeMounts:
            - mountPath: /var/lib/prometheus
              name: tsdb-storage
            - mountPath: /etc/prometheus
              name: prometheus-config
            - mountPath: /etc/prometheus-rules
              name: prometheus-rules
      volumes:
        - name: tsdb-storage
          persistentVolumeClaim:
            claimName: prometheus-storage
        - name: prometheus-config
          configMap:
            name: prometheus-config
        - name: prometheus-rules
          configMap:
            name: prometheus-rules
