kubernetes/namespaces/monitoring/prometheus/service.yml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
spec:
  selector:
    app: prometheus
  type: NodePort
  ports:
  - port: 80
    targetPort: 9090
